[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["rhshah199 <rhshah199@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.27.3"
sentencepiece = "^0.1.97"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
